--- a/src/app/user/login/Login.css
+++ b/src/app/user/login/Login.css
@@ -128,6 +128,12 @@
     background: #ffe14f;
 }
 
+.login-btn:disabled {
+    background: #CBD5E1;
+    cursor: not-allowed;
+    /* 마우스 커서를 '금지' 모양으로 변경 */
+}
+
 @media (max-width: 900px) {
     .login-card {
         width: 100%;
