fix: body에 스크롤 기능은 되지만 보이지 않도록 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,6 +123,14 @@ body {
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+body {
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 @layer base {
   html,
   body {
