--- a/src/app/review/components/MyReviewAddForm.css
+++ b/src/app/review/components/MyReviewAddForm.css
@@ -1,6 +1,6 @@
 /* Myreviewedit.css - 피그마 스타일 반영 + 중첩 사이드바 애니메이션 */
 
-@import url('https://fonts.googleapis.com/css2?family=Pretendard:wght@400;600&display=swap');
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
 /* 변경: 전체 화면을 덮는 백드롭 스타일 추가 */
 .review-add-backdrop {
     position: fixed;
