--- a/src/app/review/components/MyReviewList.css
+++ b/src/app/review/components/MyReviewList.css
@@ -1,8 +1,7 @@
 /* MyReviewMainPage.css */
 
-/* Global Styles */
-@import url('https://fonts.googleapis.com/css2?family=Pretendard:wght@400;600&family=Inter:wght@400&display=swap');
-
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
 
 body {
     font-family: 'Pretendard', 'Inter', sans-serif;
