--- a/src/app/product/components/AddressSearch.css
+++ b/src/app/product/components/AddressSearch.css
@@ -1,8 +1,8 @@
 /* 검색 결과 드롭다운 */
 .product-address-dropdown {
     position: absolute;
-    top: 60px;
-    left: 24px;
+    top: 50px;
+    /* left: 24px; */
     width: 336px;
     background-color: #ffffff;
     border: 0.5px solid #999999;
@@ -54,7 +54,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    padding: 10px 24px;
+    /* padding: 10px 24px; */
     width: 447px;
     font-family: 'Pretendard', sans-serif;
 }
