fix: 별점 비활성화

--- a/src/app/review/css/MyReviewAddForm.css
+++ b/src/app/review/css/MyReviewAddForm.css
@@ -209,3 +209,15 @@
     background-color: #85B3EB;
     color: #fff;
 }
+
+.submit-button:disabled {
+    background-color: #f5f5f5;
+    color: #ccc;
+    border-color: #ddd;
+    cursor: not-allowed;
+}
+
+.submit-button:hover:disabled {
+    background-color: #f5f5f5;
+    color: #ccc;
+}
